--- a/indra/newview/CMakeLists.txt
+++ b/indra/newview/CMakeLists.txt
@@ -315,6 +315,7 @@ set(viewer_SOURCE_FILES
     llfloaterimsessiontab.cpp
     llfloaterimsession.cpp
     llfloaterimcontainer.cpp
+    llfloaterimcontainerbase.cpp
     llimhandler.cpp
     llimview.cpp
     llinspect.cpp
@@ -894,6 +895,7 @@ set(viewer_HEADER_FILES
     llfloaterimsessiontab.h
     llfloaterimsession.h
     llfloaterimcontainer.h
+    llfloaterimcontainerbase.h
     llimview.h
     llinspect.h
     llinspectavatar.h
