--- a/indra/newview/CMakeLists.txt
+++ b/indra/newview/CMakeLists.txt
@@ -316,6 +316,7 @@ set(viewer_SOURCE_FILES
     llfloaterimsession.cpp
     llfloaterimcontainer.cpp
     llfloaterimcontainerbase.cpp
+    llfloaterimcontainertab.cpp
     llimhandler.cpp
     llimview.cpp
     llinspect.cpp
@@ -896,6 +897,7 @@ set(viewer_HEADER_FILES
     llfloaterimsession.h
     llfloaterimcontainer.h
     llfloaterimcontainerbase.h
+    llfloaterimcontainertab.h
     llimview.h
     llinspect.h
     llinspectavatar.h
