- internal : pull the pure virtual functions from LLFolderViewModelItemInventory into llui so we can get to them from LLFolderView
--HG--
branch : Inventory-ContextMenu

--- a/indra/llui/CMakeLists.txt
+++ b/indra/llui/CMakeLists.txt
@@ -166,6 +166,7 @@ set(llui_HEADER_FILES
     llfolderview.h
     llfolderviewitem.h
     llfolderviewmodel.h
+    llfolderviewmodelinventorycommon.h
     llfunctorregistry.h
     llhelp.h
     lliconctrl.h
