--- a/indra/newview/Info-Catznip.plist
+++ b/indra/newview/Info-Catznip.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleIconFile</key>
 	<string>catznip.icns</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.secondlife.indra.viewer</string>
+	<string>com.catznip.indra.viewer</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
