- internal : refactored the startup screen channel     -> startup toast is shown using normal toast placement/visibility logic     -> startup channel is destroyed when the startup toast is destroyed (=> leaks on the official viewer)     -> potential crash-fix (set away_notifications to 5, start the viewer, log on and shut down)
--HG--
branch : Chat-Chiclets

--- a/indra/newview/CMakeLists.txt
+++ b/indra/newview/CMakeLists.txt
@@ -539,6 +539,7 @@ set(viewer_SOURCE_FILES
     lltoastimpanel.cpp
     lltoastnotifypanel.cpp
     lltoastpanel.cpp
+    lltoaststartuppanel.cpp
     lltoastscripttextbox.cpp
     lltoastscriptquestion.cpp
     lltool.cpp
@@ -1114,6 +1115,7 @@ set(viewer_HEADER_FILES
     lltoastimpanel.h
     lltoastnotifypanel.h
     lltoastpanel.h
+    lltoaststartuppanel.h
     lltoastscripttextbox.h
     lltoastscriptquestion.h
     lltool.h
